--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <div class="background"></div>
     <h1 class="first-heading">
-        Word <span class="first-heading--special">Counter</span>
+        Post Word <span class="first-heading--special">Counter</span>
     </h1>
     <div class="container">
         <textarea class="textarea" spellcheck="false" placeholder="Enter your text"></textarea>
