--- a/index.html
+++ b/index.html
@@ -9,14 +9,16 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;600;700;800&family=Source+Sans+Pro:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 
+    <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
+    
     <script src="script.js" defer></script>
-    <title>Word Counter</title>
+    <title>Social Media Word</title>
 
 </head>
 <body>
     <div class="background"></div>
     <h1 class="first-heading">
-        Post Word <span class="first-heading--special">Counter</span>
+        Social Media Word <span class="first-heading--special">Counter</span>
     </h1>
     <div class="container">
         <textarea class="textarea" spellcheck="false" placeholder="Enter your text"></textarea>
