PostCheckr name change

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
     
     <script src="script.js" defer></script>
-    <title>Social Media Word</title>
+    <title>PostCheckr</title>
 
 </head>
 <body>
     <div class="background"></div>
     <h1 class="first-heading">
-        Social Media Word <span class="first-heading--special">Counter</span>
+        Post <span class="first-heading--special">Checkr</span>
     </h1>
     <div class="container">
         <textarea class="textarea" spellcheck="false" placeholder="Enter your text"></textarea>
