--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </div>
     <footer class="footer">
         <small class="copyright">&copy; Copyright by Christian Gonzalez. All rights reserved</small>
-        <small class="data">Last Checked limites: 17 days ago</small>
+        <small class="data">Last Checked: 14 days ago</small>
     </footer>
 </body>
 </html>
